Bug 1871744 - Remove ALLOC_MANUAL_SYNCHRONIZATION in CanvasTranslator::CreateTextureData() r=gfx-reviewers,lsalzman

ALLOC_MANUAL_SYNCHRONIZATION could be used only when ID3D11Texture2D is allocated by compositor device. But canvas device is not compositor device.

Differential Revision: https://phabricator.services.mozilla.com/D197276