gfx/layers/ipc/CanvasTranslator.cpp
@@ -46,8 +46,6 @@ TextureData* CanvasTranslator::CreateTextureData(TextureType aTextureType,
   switch (aTextureType) {
 #ifdef XP_WIN
     case TextureType::D3D11: {
-      allocFlags =
-          TextureAllocationFlags(allocFlags | ALLOC_MANUAL_SYNCHRONIZATION);
       textureData =
           D3D11TextureData::Create(aSize, aFormat, allocFlags, mDevice);
       break;
